log
Fri 21 Apr 2023 07:27:07 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:32: error: expected expression before ‘)’ token
   41 |   TreeMap *treeMap = (treeMap *) malloc(sizeof(treemap));
      |                                ^
Compilation failed
a902631
Fri 21 Apr 2023 07:28:09 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:33: error: expected expression before ‘)’ token
   41 |   TreeMap *treeMap = ((treeMap *) malloc(sizeof(treemap)));
      |                                 ^
Compilation failed
d3e7405
Fri 21 Apr 2023 07:28:30 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:47: error: ‘treemap’ undeclared (first use in this function); did you mean ‘treeMap’?
   41 |   TreeMap *treeMap = (treeMap * malloc(sizeof(treemap));
      |                                               ^~~~~~~
      |                                               treeMap
treemap.c:41:47: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:41:56: error: expected ‘)’ before ‘;’ token
   41 |   TreeMap *treeMap = (treeMap * malloc(sizeof(treemap));
      |                      ~                                 ^
      |                                                        )
treemap.c:48:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   48 | }
      | ^
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
ef4902f
Fri 21 Apr 2023 07:28:55 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:32: error: expected expression before ‘)’ token
   41 |   TreeMap *treeMap = (treeMap *) malloc(sizeof(treemap));
      |                                ^
Compilation failed
7668cb2
Fri 21 Apr 2023 07:29:37 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
b82b9cc
Fri 21 Apr 2023 07:30:08 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:11: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   43 |   treeMap -> root = NULL;
      |           ^~
treemap.c:41:34: note: referencing an object of size 8 allocated by ‘malloc’
   41 |   TreeMap *treeMap = (TreeMap *) malloc(sizeof(treeMap));
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~
treemap.c:44:11: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   44 |   treeMap -> current = NULL;
      |           ^~
treemap.c:41:34: note: referencing an object of size 8 allocated by ‘malloc’
   41 |   TreeMap *treeMap = (TreeMap *) malloc(sizeof(treeMap));
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~
treemap.c:45:11: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   45 |   treeMap -> lower_than = lower_than;
      |           ^~
treemap.c:41:34: note: referencing an object of size 8 allocated by ‘malloc’
   41 |   TreeMap *treeMap = (TreeMap *) malloc(sizeof(treeMap));
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f99cf0e
Fri 21 Apr 2023 07:31:20 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:11: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   43 |   treeMap -> root = NULL;
      |           ^~
treemap.c:41:34: note: referencing an object of size 8 allocated by ‘malloc’
   41 |   TreeMap *treeMap = (TreeMap *) malloc(sizeof(treeMap));
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~
treemap.c:44:11: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   44 |   treeMap -> current = NULL;
      |           ^~
treemap.c:41:34: note: referencing an object of size 8 allocated by ‘malloc’
   41 |   TreeMap *treeMap = (TreeMap *) malloc(sizeof(treeMap));
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~
treemap.c:45:11: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   45 |   treeMap -> lower_than = lower_than;
      |           ^~
treemap.c:41:34: note: referencing an object of size 8 allocated by ‘malloc’
   41 |   TreeMap *treeMap = (TreeMap *) malloc(sizeof(treeMap));
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fcc04fd
Fri 21 Apr 2023 07:31:55 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:11: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   43 |   treeMap -> root = NULL;
      |           ^~
treemap.c:41:34: note: referencing an object of size 8 allocated by ‘malloc’
   41 |   TreeMap *treeMap = (TreeMap *) malloc(sizeof(treeMap));
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~
treemap.c:45:11: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   45 |   treeMap -> lower_than = lower_than;
      |           ^~
treemap.c:41:34: note: referencing an object of size 8 allocated by ‘malloc’
   41 |   TreeMap *treeMap = (TreeMap *) malloc(sizeof(treeMap));
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b33e361
Fri 21 Apr 2023 07:33:37 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:11: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   43 |   treeMap -> root = NULL;
      |           ^~
treemap.c:41:34: note: referencing an object of size 8 allocated by ‘malloc’
   41 |   TreeMap* treeMap = (TreeMap *) malloc(sizeof(treeMap));
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~
treemap.c:44:11: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   44 |   treeMap -> lower_than = lower_than;
      |           ^~
treemap.c:41:34: note: referencing an object of size 8 allocated by ‘malloc’
   41 |   TreeMap* treeMap = (TreeMap *) malloc(sizeof(treeMap));
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d19b43a
Fri 21 Apr 2023 07:39:41 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
47f217b
Sat 22 Apr 2023 03:35:06 AM UTC: 
 treemap.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  6|6
total_score: 15/70
db97d36
